[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]

[node name="Main" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1136.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 440.0
margin_top = 201.0
margin_right = 696.0
margin_bottom = 439.0

[node name="Login" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 64.0
rect_min_size = Vector2( 256, 64 )
text = "Login"

[node name="ShareScreenShot" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 256.0
margin_bottom = 132.0
rect_min_size = Vector2( 256, 64 )
text = "Share screen shot"

[node name="Logout" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 256.0
margin_bottom = 200.0
rect_min_size = Vector2( 256, 64 )
text = "Logout"

[node name="Seperator" type="ReferenceRect" parent="CenterContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 256.0
margin_bottom = 220.0
rect_min_size = Vector2( 256, 16 )

[node name="Message" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 256.0
margin_bottom = 238.0
text = "Facebook plugin"
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ShareScreenShot" to="." method="_on_ShareScreenShot_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Logout" to="." method="_on_Logout_pressed"]
